# pyssmt

./: LICENSE  README.md  pyproject.toml
examples/: run_sed10.py  synthetic_demo.py
pyssmt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ssmt/: __init__.py  cli.py  dataio.py  em.py  plot.py  spect.py  tapers.py
ssmt/__pycache__/: em._em_step-6.py310.1.nbc  em._em_step-6.py310.2.nbc  em._em_step-6.py310.nbi
ssmt/ssmt/: __init__.py  spect.py
tests/: test_em.py
