[project]
name = "pyssmt"
version = "0.1.0"
description = "State-Space Multitaper Spectrogram (Python port of Kim et al. 2018)"
authors = [{name="Bowen Zheng", email="bowen27@mit.edu"}]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.22",
  "scipy>=1.11",
  "numba>=0.59",
  "matplotlib>=3.8",
]

[project.scripts]
ssmt = "ssmt.cli:main"
